Added mock server and methods to mock search results

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
       <button class="search__actions__action search__actions__action--lucky">I'm Feeling Lucky</button>
     </div>
   </div>
+  <script src="./app.js"></script>
 </body>
 </html>
