--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div class="search">
     <div class="search__bar">
       <input type="text" class="search__bar__input" />
+      <img class="search__bar__microphone" src="./microphone.PNG" />
     </div>
     <div class="search__suggestions">
       <ul class="search__suggestions__list">
